<resources>
    <string name="app_name">Fitness_Tracker</string>
    <string name="MainMenu_header">MAIN MENU</string>
    <string name="MainMenu_exercises_button">EXERCISES</string>
    <string name="MainMenu_workouts_button">WORKOUTS</string>
    <string name="MainMenu_userInfo_button">USER INFO</string>
    <string name="MainMenu_logIn_button">LOGIN</string>
    <string name="MainMenu_logOut_button">LOGOUT</string>
    <string name="Workouts_header">WORKOUTS</string>
    <string name="Workouts_AddWorkout_button_label">+</string>
    <string name="AddWorkout_page_header">Add Workout</string>
    <string name="AddWorkout_exercises_header">Add Exercises to this Workout</string>
    <string name="AddWorkout_WorkoutName_default">New Workout Name</string>
    <string name="AddWorkout_workoutName">New Workout</string>
    <string name="AddWorkout_confirm_button">DONE</string>
    <string name="button_leg">Legs</string>
    <string name="button_arm">Arm</string>
    <string name="button_chest">Chest</string>
    <string name="button_back">Back</string>
    <string name="button_shoulder">Shoulders</string>
    <string name="button_cardio">Cardio</string>
    <string name="enter_name">name</string>
    <string name="enter_muscleGroup">Muscle Group</string>
    <string name="enter_type">type</string>
    <string name="exercise_submit">Submit</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="health_history">Health History</string>
    <string name="exercise_history">Exercise History</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="Plus">+</string>
    <string name="logging_in_login">Log In</string>
    <string name="logging_in_signUp">Sign Up</string>
    <string name="logging_in_username">Username</string>
    <string name="logging_in_password">Password</string>
    <string name="sign_up_confirmpassword">Confirm Password</string>
    <string name="Admin_header">Admin Tools</string>
    <string name="Admin_deleteUserButton">Delete User</string>
    <string name="Admin_deleteExerciseButton">Delete Exercise</string>
    <string name="Admin_deleteWorkoutButton">Delete Workout</string>
    <string name="no_history">No History</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enter">Enter</string>
    <string name="change_password">Change Password</string>
    <string name="new_exercise_record">Add Record</string>
    <string name="Record">Enter record here</string>
    <string name="Time_new_exercise_history">Enter Time</string>
    <string name="Title_new_exercise_history">New Exercise History</string>
    <string name="Set_new_exercise_history">Enter Sets</string>
    <string name="Rep_new_exercise_history">Enter Reps</string>
    <string name="User_deleteUserButton">Delete Account</string>
    <string name="User_deleteWorkout">Manage Schedule</string>
</resources>
