<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cpsc471.cpsc471project.MainActivity"
    >

    <Button
        android:id="@+id/MainMenu_exercises_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/MainMenu_button_height"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/MainMenu_exercises_button"
        android:textSize="@dimen/button_textSize" />

    <Button
        android:id="@+id/MainMenu_workouts_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/MainMenu_button_height"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/MainMenu_workouts_button"
        android:textSize="@dimen/button_textSize"
        />

    <Button
        android:id="@+id/MainMenu_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/MainMenu_button_height"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="@dimen/button_textSize" />

    <Button
        android:id="@+id/MainMenu_userInfo_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/MainMenu_button_height"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/MainMenu_userInfo_button"
        android:textSize="@dimen/button_textSize"
        android:visibility="invisible" />

    <Button
        android:id="@+id/MainMenu_admin_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/MainMenu_button_height"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Admin_header"
        android:textSize="@dimen/button_textSize" />

</LinearLayout>
