<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add__workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cpsc471.cpsc471project.Add_Workout"
    >

    <TextView
        android:id="@+id/AddWorkout_page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddWorkout_page_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/Workout_Name_TextView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/Workout_Name_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AddWorkout_WorkoutName_default"
        android:layout_alignBottom="@+id/AddWorkout_exercises_header"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/AddWorkout_exercises_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddWorkout_exercises_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/AddWorkout_addExercise_button"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/AddWorkout_addExercise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AddExerciseToWorkout"
        android:text="@string/Plus"
        android:textSize="@dimen/button_textSize"
        android:layout_marginLeft="105dp"
        android:layout_marginRight="105dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>