<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cpsc471.cpsc471project.AdminPage"
    >

    <TextView
        android:id="@+id/Admin_header"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Admin_header"
        android:textSize="@dimen/page_header_textSize"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/Admin_deleteUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="showTableSelected"
        android:text="@string/Admin_deleteUserButton"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_header" />

    <Button
        android:id="@+id/Admin_deleteExerciseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="showTableSelected"
        android:text="@string/Admin_deleteExerciseButton"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_deleteUserButton" />

    <Button
        android:id="@+id/Admin_deleteWorkoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="showTableSelected"
        android:text="@string/Admin_deleteWorkoutButton"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_deleteExerciseButton" />

</android.support.constraint.ConstraintLayout>
