<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cpsc471.cpsc471project.DisplayProfile">

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:onClick="deleteWorkout"
        android:text="@string/User_deleteWorkout"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DisplayProfile_deleteUserButton" />

    <TextView
        android:id="@+id/DisplayProfile_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="@dimen/page_header_textSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/changePassword_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="@dimen/button_textSize"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/DisplayProfile_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/DisplayProfile_deleteUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/User_deleteUserButton"
        android:textSize="@dimen/button_textSize"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword_button"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>
