<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cpsc471.cpsc471project.AddHistory">

    <EditText
        android:id="@+id/weight_entry"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_entry"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/height_entry"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/add_history"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:onClick="addHealth"
        android:text="@string/enter"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_entry" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="KG"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toRightOf="@+id/weight_entry"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="CM"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toRightOf="@+id/height_entry"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
